# Test-task-beautyrobot

./: .gitignore  README.md  pyproject.toml
task-2/: count_elements.py
task_1/: verify_input_data.py
task_3/: diff_list.py  find_diff.py  json_new.py  json_old.py
task_4/: mongo.py
task_5/: config.py  functions_to_call.py  webhook_handler.py  webhook_validation.py
